--- a/Sample/src/main/AndroidManifest.xml
+++ b/Sample/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name="com.wuba.mobile.middle.app.FirstActvity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan">
+        </activity>
     </application>
 </manifest>
