--- a/Sample/src/main/AndroidManifest.xml
+++ b/Sample/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
@@ -34,6 +34,33 @@
             android:name="com.wuba.mobile.middle.app.ThirdActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
+        </activity>
+
+        <activity android:name=".SchemeFilterActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <category android:name="android.intent.category.BROWSABLE"></category>
+
+                <data
+                    android:host="mis.android"
+                    android:scheme="router"></data>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".WebViewActivity"></activity>
+        <activity android:name=".TargetActivity"></activity>
+
+        <activity android:name=".ImplicitActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <data
+                    android:host="implicit"
+                    android:scheme="router"
+                    ></data>
+            </intent-filter>
         </activity>
     </application>
 </manifest>
