--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':sample', ':router', ':annotation', ':compiler'
+include ':sample', ':router', ':annotation', ':compiler', ':submodule2', ':submodule1'
