--- a/subModule2/build.gradle
+++ b/subModule2/build.gradle
@@ -1,9 +1,8 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
     defaultConfig {
-        applicationId "com.wuba.mobile.middle.app"
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
@@ -14,22 +13,21 @@ android {
             }
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:25.1.0'
     annotationProcessor project(':compiler')
     implementation project(':annotation')
     implementation project(':router')
-
-    implementation project(':submodule1')
-    implementation project(':submodule2')
 
 }
