--- a/compiler/artifactory.gradle
+++ b/compiler/artifactory.gradle
@@ -5,11 +5,9 @@ ext {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
-    ArtifactID = 'mrouter-api'
-    Packaging = 'aar'
-    artifactVersion  = '2.0.001-SNAPSHOT'
-// def artifactVersion = '1.0.0-SNAPSHOT'//发布的快照版本
-    GroupID = 'com.wuba.mobile.plugin'
+    ArtifactID = 'mrouter-compiler'
+    artifactVersion  = '2.0.003-SNAPSHOT'
+    GroupID = 'com.wuba.mobile.lib'
     ContextUrl = properties.getProperty("artifactory_contextUrl")
     ReleaseRepoKey = properties.getProperty("artifactory_release_repoKey")
     SnapshotRepoKey = properties.getProperty("artifactory_snapshot_repoKey")
@@ -24,7 +22,7 @@ publishing {
             version = artifactVersion
             artifactId ArtifactID
             // Tell maven to prepare the generated "* .aar" file for publishing
-            artifact("$buildDir/outputs/aar/${project.name}-release.aar")
+            artifact("$buildDir/libs/${project.name}.jar")
 
             pom.withXml {
                 def root = asNode()
@@ -32,6 +30,17 @@ publishing {
                 license.appendNode('name', 'The Apache Software License, Version 2.0')
                 license.appendNode('url', 'http://www.apache.org/licenses/LICENSE-2.0.txt')
                 license.appendNode('distribution', 'repo')
+
+                def dependenciesNode = asNode().appendNode('dependencies')
+                //Iterate over the compile dependencies (we don't want the test ones), adding a <dependency> node for each
+                configurations.api.allDependencies.each {
+                    if(it.group==null || it.name==null || it.version==null) return
+                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('groupId', it.group)
+                    dependencyNode.appendNode('artifactId', it.name)
+                    dependencyNode.appendNode('version', it.version)
+                }
+
             }
         }
     }
@@ -42,14 +51,14 @@ artifactory {
     publish {
         repository {
             // The Artifactory repository key to publish to
-            repoKey = artifactVersion.endsWith('SNAPSHOT') ? SnapshotRepoKey : ReleaseRepoKey
+            //repoKey = artifactVersion.endsWith('SNAPSHOT') ? SnapshotRepoKey : ReleaseRepoKey
+            repoKey = SnapshotRepoKey;
             username = UserName//"${artifactory_user}" // The publisher user name
             password = Password//"${artifactory_password}" // The publisher password
             maven = true
         }
         defaults {
             publishArtifacts = true
-            publications(Packaging)
             publishPom = true //Publish generated POM files to Artifactory (true by default)
             publishIvy = false //Publish generated Ivy descriptor files to Artifactory (true by default)
         }
