--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,10 +1,11 @@
+apply from: "artifactory.gradle"
 apply plugin: 'java-library'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':annotation')
-    compile 'com.google.auto.service:auto-service:1.0-rc2'
-    compile 'com.squareup:javapoet:1.7.0'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.wuba.mobile.lib:mrouter-annotation:2.0.001-SNAPSHOT'
+    api 'com.google.auto.service:auto-service:1.0-rc2'
+    api 'com.squareup:javapoet:1.7.0'
 }
 
 sourceCompatibility = "1.7"
