--- a/router/build.gradle
+++ b/router/build.gradle
@@ -21,8 +21,9 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    annotationProcessor project(':compiler')
-    compileOnly 'com.android.support:support-v4:25.1.1'
+   // annotationProcessor project(':compiler')
+    implementation 'com.android.support:support-v4:25.1.1'
+    api 'com.wuba.mobile.lib:mrouter-annotation:2.0.001-SNAPSHOT'
 }
 
 apply from: "artifactory.gradle"
