--- a/Sample/src/main/AndroidManifest.xml
+++ b/Sample/src/main/AndroidManifest.xml
@@ -19,13 +19,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.wuba.mobile.middle.app.FirstActvity"
+            android:name="com.wuba.mobile.middle.app.ArgsActvity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
         </activity>
 
         <activity
-            android:name="com.wuba.mobile.middle.app.SecondActvity"
+            android:name="com.wuba.mobile.middle.app.ResultActvity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
         </activity>
